--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<mah:MetroWindow x:Class="VroomMachineV2.MainWindow"
+<mah:MetroWindow x:Class="VroomMachineV2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -38,7 +38,8 @@
 
                         <GroupBox Margin="6,152,392,756" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Controls:HeaderedControlHelper.HeaderBackground="{DynamicResource MahApps.Brushes.Transparent}">
                             <Grid>
-                                <Button x:Name="GiveWeapon" Click="SetP1WeaponSlot" Content="Give" IsEnabled="True" Margin="0,6,209,9" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Focusable="False"></Button>
+                                <Controls:NumericUpDown x:Name="p1id" Margin="-3,3,193,42" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" TextAlignment="Left" Controls:ControlsHelper.DisabledVisualElementVisibility="Hidden" UpDownButtonsFocusable="False" InterceptArrowKeys="False" HideUpDownButtons="True"/>
+                                <Button x:Name="GiveWeapon" Click="SetP1WeaponSlot" Content="Give" IsEnabled="True" Margin="0,38,201,9" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Focusable="False" Padding="0,0,0,0"></Button>
                                 <RadioButton x:Name="Slot1" Content="Weap 1" IsEnabled="True" HorizontalAlignment="Left" Margin="64,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="True" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
                                 <RadioButton x:Name="Slot2" Content="Weap 2" IsEnabled="True" HorizontalAlignment="Left" Margin="124,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="False" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
                                 <RadioButton x:Name="Slot3" Content="Weap 3" IsEnabled="True" HorizontalAlignment="Left" Margin="184,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="False" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
@@ -173,7 +174,8 @@
 
                         <GroupBox Margin="6,152,392,756" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Controls:HeaderedControlHelper.HeaderBackground="{DynamicResource MahApps.Brushes.Transparent}">
                             <Grid>
-                                <Button x:Name="p2GiveWeapon" Click="SetP2WeaponSlot" Content="Give" IsEnabled="True" Margin="0,6,209,9" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Focusable="False"></Button>
+                                <Controls:NumericUpDown x:Name="p2id" Margin="-3,3,193,42" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" TextAlignment="Left" Controls:ControlsHelper.DisabledVisualElementVisibility="Hidden" UpDownButtonsFocusable="False" InterceptArrowKeys="False" HideUpDownButtons="True"/>
+                                <Button x:Name="p2GiveWeapon" Click="SetP2WeaponSlot" Content="Give" IsEnabled="True" Margin="0,38,201,9" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Focusable="False" Padding="0,0,0,0"></Button>
                                 <RadioButton x:Name="p2Slot1" Content="Weap 1" IsEnabled="True" HorizontalAlignment="Left" Margin="64,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="True" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
                                 <RadioButton x:Name="p2Slot2" Content="Weap 2" IsEnabled="True" HorizontalAlignment="Left" Margin="124,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="False" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
                                 <RadioButton x:Name="p2Slot3" Content="Weap 3" IsEnabled="True" HorizontalAlignment="Left" Margin="184,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="False" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
@@ -234,7 +236,8 @@
 
                         <GroupBox Margin="6,152,392,756" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Controls:HeaderedControlHelper.HeaderBackground="{DynamicResource MahApps.Brushes.Transparent}">
                             <Grid>
-                                <Button x:Name="p3GiveWeapon" Click="SetP3WeaponSlot" Content="Give" IsEnabled="True" Margin="0,6,209,9" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Focusable="False"></Button>
+                                <Controls:NumericUpDown x:Name="p3id" Margin="-3,3,193,42" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" TextAlignment="Left" Controls:ControlsHelper.DisabledVisualElementVisibility="Hidden" UpDownButtonsFocusable="False" InterceptArrowKeys="False" HideUpDownButtons="True"/>
+                                <Button x:Name="p3GiveWeapon" Click="SetP3WeaponSlot" Content="Give" IsEnabled="True" Margin="0,38,201,9" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Focusable="False" Padding="0,0,0,0"></Button>
                                 <RadioButton x:Name="p3Slot1" Content="Weap 1" IsEnabled="True" HorizontalAlignment="Left" Margin="64,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="True" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
                                 <RadioButton x:Name="p3Slot2" Content="Weap 2" IsEnabled="True" HorizontalAlignment="Left" Margin="124,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="False" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
                                 <RadioButton x:Name="p3Slot3" Content="Weap 3" IsEnabled="True" HorizontalAlignment="Left" Margin="184,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="False" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
@@ -294,7 +297,8 @@
 
                         <GroupBox Margin="6,152,392,756" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Controls:HeaderedControlHelper.HeaderBackground="{DynamicResource MahApps.Brushes.Transparent}">
                             <Grid>
-                                <Button x:Name="p4GiveWeapon" Click="SetP4WeaponSlot" Content="Give" IsEnabled="True" Margin="0,6,209,9" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Focusable="False"></Button>
+                                <Controls:NumericUpDown x:Name="p4id" Margin="-3,3,193,42" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" TextAlignment="Left" Controls:ControlsHelper.DisabledVisualElementVisibility="Hidden" UpDownButtonsFocusable="False" InterceptArrowKeys="False" HideUpDownButtons="True"/>
+                                <Button x:Name="p4GiveWeapon" Click="SetP4WeaponSlot" Content="Give" IsEnabled="True" Margin="0,38,201,9" BorderBrush="{DynamicResource MahApps.Brushes.Transparent}" Focusable="False" Padding="0,0,0,0"></Button>
                                 <RadioButton x:Name="p4Slot1" Content="Weap 1" IsEnabled="True" HorizontalAlignment="Left" Margin="64,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="True" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
                                 <RadioButton x:Name="p4Slot2" Content="Weap 2" IsEnabled="True" HorizontalAlignment="Left" Margin="124,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="False" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
                                 <RadioButton x:Name="p4Slot3" Content="Weap 3" IsEnabled="True" HorizontalAlignment="Left" Margin="184,3,0,57" Controls:RadioButtonHelper.RadioSize="12" IsChecked="False" Controls:RadioButtonHelper.RadioCheckSize="4" Background="{DynamicResource MahApps.Brushes.Transparent}" FontSize="11" FontFamily="Segoe UI" Focusable="False"/>
